// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly handle the submit event and close the modal 1`] = `
Array [
  Array [
    Object {
      "avatar": "",
      "groupCount": 3,
      "login": "admin",
      "name": "Admin Istrator",
    },
    Array [
      "7",
    ],
    Array [
      "11",
    ],
  ],
]
`;

exports[`should correctly handle the submit event and close the modal 2`] = `
Object {
  "loading": false,
  "open": false,
  "userGroups": Object {
    "11": Object {
      "description": "Technical accounts",
      "id": 11,
      "name": "pull-request-analysers",
      "selected": true,
      "status": "remove",
    },
    "7": Object {
      "status": "add",
    },
  },
}
`;

exports[`should correctly handle user interactions 1`] = `
Object {
  "loading": false,
  "open": true,
  "userGroups": Object {
    "11": Object {
      "description": "Technical accounts",
      "id": 11,
      "name": "pull-request-analysers",
      "selected": true,
    },
  },
}
`;

exports[`should correctly select the groups 1`] = `
Object {
  "11": Object {
    "description": "Technical accounts",
    "id": 11,
    "name": "pull-request-analysers",
    "selected": true,
    "status": "remove",
  },
  "7": Object {
    "status": "add",
  },
}
`;

exports[`should render and open the modal 1`] = `
<a
  href="#"
  key="manage-member-button"
  onClick={[Function]}
>
  organization.members.manage_groups
</a>
`;

exports[`should render and open the modal 2`] = `
Array [
  <a
    href="#"
    key="manage-member-button"
    onClick={[Function]}
  />,
  <Modal
    contentLabel="organization.members.manage_groups"
    key="manage-member-modal"
    onRequestClose={[Function]}
  />,
]
`;

exports[`should reset the selected groups when the modal is opened 1`] = `
Object {
  "loading": false,
  "open": true,
  "userGroups": Object {
    "11": Object {
      "description": "Technical accounts",
      "id": 11,
      "name": "pull-request-analysers",
      "selected": true,
      "status": "remove",
    },
    "7": Object {
      "status": "add",
    },
  },
}
`;

exports[`should reset the selected groups when the modal is opened 2`] = `
Object {
  "loading": false,
  "open": true,
  "userGroups": Object {
    "11": Object {
      "description": "Technical accounts",
      "id": 11,
      "name": "pull-request-analysers",
      "selected": true,
    },
  },
}
`;
